<resources>
    <string name="loading">loading</string>
    <string name="enter_over">Sign in</string>
    <string name="enter_over_DA">Log in with Email</string>
    <string name="registration_on_DA">Register with Email</string>
    <string name="skip_registration">Skip registration</string>
    <string name="home_button_bars">Bars</string>
    <string name="home_button_drinks">Drinks</string>
    <string name="home_button_cocktails">Cocktails</string>
    <string name="home_button_reviews">Reviews</string>
    <string name="home_button_friends">Friends</string>
    <string name="home_button_meetings">Events</string>
    <string name="home_button_favorites">Favourites</string>
    <string name="home_button_activity">Activity</string>
    <string name="home_button_profile">Profile</string>
    <string name="basis">Basis</string>
    <string name="back">Back</string>
    <string name="brands">Brands</string>
    <string name="drinks">Drinks</string>
    <string name="bars">Bars</string>
    <string name="cocktails">Cocktails</string>
    <string name="usual_reg_header">Registration with Email</string>
    <string name="usual_login_header">Sign in</string>
    <string name="login">Sign in</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your e-mail</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="date_birth">Date of birth</string>
    <string name="register_message"></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="aprove">Confirm</string>
    <string name="check_age_message">To enjoy our app you must be 21 years of age or older. Please confirm your age</string>
    <string name="check_age_denied">Sorry, access to the app is restricted for persons under 21 years</string>
    <string name="no_activity">No activity yet</string>
    <string name="activity">Activity</string>
    <string name="login_required">Login required</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="days_ago">days ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="total_friends">friends</string>
    <string name="total_checkins">check-in</string>
    <string name="total_comments">comments</string>
    <string name="profile">Profile</string>
    <string name="profile_feed">ACTIVITY FEED</string>
    <string name="settings">Settings</string>
    <string name="private_data">PERSONAL DATA"</string>
    <string name="select_male">Select male</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="social_networks">SOCIAL NETWORKS</string>
    <string name="other_settings">PRIVATE INFORMATION</string>
    <string name="connect_to_facebook">Tap to connect</string>
    <string name="connected_to_facebook">Facebook connected</string>
    <string name="connect_to_twitter">Tap to connect</string>
    <string name="connected_to_twitter">Twitter connected</string>
    <string name="private_mode">Private mode</string>
    <string name="settings_notification">Turn privace ON to approve follow requests. Your existing followers won\'t be affected</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="exit">Log out</string>
    <string name="notification_likes">Like notifications</string>
    <string name="notification_comments">Friends bar reviews notifications</string>
    <string name="notification_posts">New reviews notifications</string>
    <string name="notification_checkins">Friends Check in notifications</string>
    <string name="bar_checkin">Check-in</string>
    <string name="bar_meeting">New event</string>
    <string name="bar_favorite">In favorites</string>
    <string name="bar_comments">Comments</string>
    <string name="bar_comments_user_photo">COMMENTS</string>
    <string name="bar_photos">Photos</string>
    <string name="bar_add_photo">Add photo</string>
    <string name="working_time">WORKING TIME</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="this_is_today">THIS IS TODAY</string>
    <string name="wrong_info">Wrong info</string>
    <string name="about_bar">ABOUT BAR</string>
    <string name="select_weekday">Select week day</string>
    <string name="main_menu">Main menu</string>
    <string name="home">Home</string>
    <string name="private_sections">Private pages</string>
    <string name="actions">Actions</string>
    <string name="create_meeting">Create event</string>
    <string name="reviews">Reviews</string>
    <string name="_friends">Friends</string>
    <string name="meetings">Events</string>
    <string name="favorites">Favourites</string>
    <string name="recommend_bar">Add new bar</string>
    <string name="view">View</string>
    <string name="bars_list">Bars list</string>
    <string name="bars_map">Bars on map</string>
    <string name="filter">Sort by</string>
    <string name="filter_by_distance">Distance</string>
    <string name="filter_by_rating">Rating</string>
    <string name="_working_time">Working hours</string>
    <string name="opened_now">Today Open</string>
    <string name="show_all">Show all bars</string>
    <string name="apply">Show results</string>
    <string name="select_city">Select city</string>
    <string name="_bar_name">Bar name</string>
    <string name="_address">Address</string>
    <string name="mark_on_the_map">Mark on the map</string>
    <string name="what_about_this_bar">What about this bar?</string>
    <string name="let_write_about_this_here">Let write about this here</string>
    <string name="_send">Send</string>
    <string name="add_review">Add a review</string>
    <string name="_reviews">REVIEWS</string>
    <string name="you_like_this_bar">If you like this bar write comment please</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="choose_friends">Choose friends</string>
    <string name="take_photo">Take photo</string>
    <string name="write_something_here">Write something</string>
    <string name="_dont_know">DON\'T KNOW</string>
    <string name="_will_go">WILL GO</string>
    <string name="_will_not_can">WILL NOT GO</string>
    <string name="_remove">DELETE</string>
    <string name="_cancel">CANCEL</string>
    <string name="all">all</string>
    <string name="invited_many">Invited</string>
    <string name="invited_one">Invited</string>
    <string name="checked_in_one">Checked in</string>
    <string name="will_go">Will go</string>
    <string name="call_your_friends">Invite friends</string>
    <string name="_comments">COMMENTS</string>
    <string name="add_your_comment">Add comment</string>
    <string name="who_will_go">Invited</string>
    <string name="_dont_know_">Don\'t know</string>
    <string name="_will_go_">Will go</string>
    <string name="_will_not_can_">Will not go</string>
    <string name="meeting_description">DESCRIPTION</string>
    <string name="invite">invites</string>
    <string name="_invited">invited</string>
    <string name="no_meetings">You have no events yet</string>
    <string name="today">today</string>
    <string name="_new">new!</string>
    <string name="next">Next</string>
    <string name="meeting_title"> Name of event</string>
    <string name="meeting_date">Date</string>
    <string name="meeting_time">Time</string>
    <string name="meeting_comment">Description of the event</string>
    <string name="create_meeting_info">New event</string>
    <string name="cancel">Cancel</string>
    <string name="select_bar">Select the venue</string>
    <string name="meeting_resume">New event</string>
    <string name="meeting_past">events\'s past</string>
    <string name="went">went</string>
    <string name="invite_all">Invite all</string>
    <string name="check_in_all">Check in all</string>
    <string name="selected_only">Invite selected</string>
    <string name="_invite">Invite</string>
    <string name="_check_in">Check in</string>
    <string name="selected">Selected</string>
    <string name="you_are_following">FOLLOWING</string>
    <string name="your_followers">FOLLOWERS</string>
    <string name="ask_cancel_meeting">Do you want to cancel the event?</string>
    <string name="ask_remove_meeting">Do you want to remove the event?</string>
    <string name="meeting_settings">SETTINGS</string>
    <string name="friends_can_invite_friends">Friends can invite friends</string>
    <string name="publish_to_facebook">Publish to Facebook</string>
    <string name="publish_to_twitter">Publish to Twitter</string>
    <string name="description">DESCRIPTION</string>
    <string name="over_social_networks">Please Login to access</string>
    <string name="wrong_meeting_date">You can\'t create event in the past</string>
    <string name="_registration">Registration</string>
    <string name="no_connect_announce">Unfortunately, the Internet connection is not available</string>
    <string name="stay_offline">View Favourites</string>
    <string name="stay_online">Connect to the network</string>
    <string name="closed_today">Closed today</string>
    <string name="opened_tonight">Open today</string>
    <string name="opened_today">Open today</string>
    <string name="_take_photo">take photo</string>
    <string name="_change_photo">change photo</string>
    <string name="add_photo">Add photo</string>
    <string name="recommend_bar_message">Your information will be proccesed in the nearest time</string>
    <string name="search_bars_nothing">Unfortunately no results for search</string>
    <string name="you_have_found">You\'ve found</string>
    <string name="all_bars">All bars</string>
    <string name="invites_you">invites you</string>
    <string name="choose_city">City</string>
    <string name="bar_name">The name of the bar</string>
    <string name="address">Location</string>
    <string name="mark_on_map">Show on map</string>
    <string name="what_is_good">What good is this bar?</string>
    <string name="send">SEND</string>
    <string name="enter_bar_name">Enter the name of the bar</string>
    <string name="no_activities">NO ACTIVITIES YET</string>
    <string name="no_friends">YOU HAVE NO FRIENDS YET</string>
    <string name="no_places">YOUR LIST OF PLACES IS STILL EMPTY</string>
    <string name="one_of">of</string>
    <string name="review_nothing">NO REVIEWS YET.</string>
    <string name="review_be_the_first">BE THE FIRST!</string>
    <string name="bar_no_photos">No users photos yet</string>
    <string name="bar_checkin_disable">You have already checked in this bar.</string>
    <string name="bar_too_far">You are too far from this bar!</string>
    <string name="need_checkin">You need to check in to add photos.</string>
    <string name="checkin">Check in</string>
    <string name="add_friends">SELECT</string>
    <string name="go">will go</string>
    <string name="dont_go">will not go</string>
    <string name="dont_know">Don\'t know</string>
    <string name="cancel_meeting">Cancel event</string>
    <string name="SN_connect_error">This account is already in use</string>
    <string name="actual_meetings">Upcoming events</string>
    <string name="past_meetings">Past events</string>
    <string name="discuss_meeting">Discuss event</string>
    <string name="select_bar_for_meeting">Select bar for event</string>
    <string name="select_date">Select the date</string>
    <string name="select_time">Select the time</string>
    <string name="invalid_date">Incorrect date</string>
    <string name="your_comment">Your comment</string>
</resources>